[package]
resolver = "2"
name = "tokio-tracer"
version = "0.1.1"
edition = "2024"
authors = ["nobane"]
repository = "https://github.com/nobane/tokio-tracer"
license = "MIT"
description = "Simple tokio-based trace event collector"
readme = "README.md"


[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", features = ["serde"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["attributes", "valuable"] }
tracing-core = "0.1.34"


[dev-dependencies]
tempfile = "3.20.0"
